<resources>
    <string name="app_name">BlechWiki</string>
    <string name="get_buchFundstellen">GetBuchFundstellen</string>
    <string name="get_lieder">GetLieder</string>
    <string name="get_lieder2">GetLieder2</string>
    <string name="get_komponistFundstellen">GetKomponistFundstellen</string>
    <string name="landeskirche">Landeskirche</string>
    <string name="menu_action_settings">Einstellungen</string>
    <string name="menu_action_search">Suche</string>
    <string name="menu_action_sort">Sort</string>
    <string name="menu_action_sort_ABC">Sort ABC</string>
    <string name="menu_action_sort_Nr">Sort Nr</string>
    <string name="menu_action_sort_Anlass">Sort Anlass</string>
    <string name="menu_action_about">Über</string>
    <string name="search">Suche</string>
    <string name="published">Posaunote Version 1.3.0 (30.06.2024)</string>
    <string name="published_text">"Datenbank bereitgestellt durch Blechwiki (https://www.blechwiki.de)\n\n
Datenschutzhinweise
<a href="http://pcportal.ddns.net/BlechWikiHTML/datenschutz.html">http://pcportal.ddns.net/BlechWikiHTML/datenschutz.html</a>
Alle Rechte an der App: Olaf Tuchel, Hamburg, Copyright © 2019\n
Aktuelle Version existiert für Android, iOS folgt später.\n
Verbesserungsvorschläge oder Fehler bitte senden an olaf.tuchel@gmx.de\n
Änderungen: Umstellung auf Kotlin, REST Api \n
</string>
</resources>
